--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-dom": "19.2.1",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.67.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
     "server-only": "^0.0.1",
@@ -84,6 +85,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query-devtools": "^5.91.1",
     "@types/humanize-duration": "^3.27.4",
     "@types/node": "^20",
