--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
+    "resend": "^6.6.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
